--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -16,7 +16,7 @@ rewrite ^/treatment-services/therapy-types/?$ https://$host/addiction-treatment-
 rewrite ^/treatment-services/aftercare/?$ https://$host/addiction-treatment-new-jersey/aftercare/ permanent;
 #FACILITY-752
 rewrite ^/what-to-expect/families/after-rehab/?$ https://$host/addiction-treatment-new-jersey/admissions/families/ permanent;
-rewrite ^/addiction-recovery-program-overview/therapy-types/pet-therapy/?$ https://$host/addiction-treatment-new-jersey/therapy-types/pet-therapy/ permanent;
+rewrite ^/addiction-recovery-program-overview/therapy-types/pet-therapy/?$ https://$host/addiction-treatment-new-jersey/therapy-types/ permanent;
 rewrite ^/admissions/what-to-expect/families/?$ https://$host/addiction-treatment-new-jersey/admissions/families/ permanent;
 #FACILITY-1088
 rewrite ^/hippa-policy/?$ https://$host/hipaa-policy/ permanent;
@@ -283,7 +283,7 @@ rewrite ^/cause-effect/?$ https://$host/addiction-info/ permanent;
 rewrite ^/cause-effect/heroin-use/?$ https://$host/heroin-addiction-treatment/ permanent;
 rewrite ^/cause-effect/alcohol-use/?$ https://$host/stop-drinking-alcohol/ permanent;
 rewrite ^/cause-effect/ecstasy-use/?$ https://$host/ecstasy-abuse/effects/ permanent;
-rewrite ^/cause-effect/marijuana-use/?$ https://$host/quit-abusing-marijuana/immediate-effects/ permanent;
+rewrite ^/cause-effect/marijuana-use/?$ https://$host/quit-abusing-marijuana/effects/ permanent;
 rewrite ^/cause-effect/comedown-cocaine-ecstasy/?$ https://$host/cocaine-addiction-treatment/comedown-cocaine-ecstasy/ permanent;
 rewrite ^/cause-effect/cocaine-use/?$ https://$host/cocaine-addiction-treatment/effects-risks/ permanent;
 rewrite ^/research/history-mafia-drugs-crime-atlantic-city/?$ https://$host/addiction-info/history-mafia-drugs-crime-atlantic-city/ permanent;
@@ -401,7 +401,7 @@ rewrite ^/blog/work-from-home/?$ https://$host/blog/life-in-recovery/work-from-h
 rewrite ^/blog/staying-sober-while-spouse-drinks/?$ https://$host/blog/life-in-recovery/staying-sober-while-spouse-drinks/ permanent;
 rewrite ^/blog/sober-inner-circle/?$ https://$host/blog/life-in-recovery/sober-inner-circle/ permanent;
 rewrite ^/blog/top-5-sober-things-nj-thanksgiving-weekend/?$ https://$host/blog/life-in-recovery/top-5-sober-things-nj-thanksgiving-weekend/ permanent;
-rewrite ^/blog/sober-survival-guide-for-winter/?$ https://$host/blog/life-in-recovery/sober-survival-guide-for-winter/ permanent;
+rewrite ^/blog/sober-survival-guide-for-winter/?$ https://$host/blog/life-in-recovery/sober-survival-guide/ permanent;
 rewrite ^/blog/best-gifts-give-someone-new-addiction-recovery/?$ https://$host/blog/life-in-recovery/great-sober-gifts/ permanent;
 rewrite ^/blog/10-tips-building-healthy-relationships-early-sobriety/?$ https://$host/blog/life-in-recovery/10-tips-building-healthy-relationships-early-sobriety/ permanent;
 rewrite ^/blog/5-traits-look-people-will-help-stay-sober/?$ https://$host/blog/life-in-recovery/5-traits-look-people-will-help-stay-sober/ permanent;
@@ -548,4 +548,12 @@ rewrite ^/contributors/natoiya-sears/?$ https://$host/staff/ permanent;
 #FACILITY-11692
 rewrite ^/polydrug-use/benzo-barbs/?$ https://$host/polydrug-use/ permanent;
 rewrite ^/polydrug-use/mdma-alcohol/?$ https://$host/polydrug-use/ permanent;
+#FACILITY-11693
+rewrite ^/addiction-treatment-new-jersey/therapy-types/pet-therapy/?$ https://$host/addiction-treatment-new-jersey/therapy-types/ permanent;
+rewrite ^/conduct-disorder/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/blog/life-in-recovery/sober-survival-guide-for-winter/?$ https://$host/blog/life-in-recovery/sober-survival-guide/ permanent;
+rewrite ^/quit-abusing-marijuana/forms-ways-taken/?$ https://$host/quit-abusing-marijuana/forms-of-cannabis/ permanent;
+rewrite ^/quit-abusing-marijuana/immediate-effects/?$ https://$host/quit-abusing-marijuana/effects/ permanent;
+rewrite ^/quit-abusing-marijuana/legalization-laws/?$ https://$host/quit-abusing-marijuana/ permanent;
+rewrite ^/polydrug-use/opioids-amphetamines/?$ https://$host/polydrug-use/opioids-stimulants/ permanent;
 rewrite ^/polydrug-use/benzo-narcotics/?$ https://$host/polydrug-use/benzodiazepines-opioids/ permanent;
