--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -557,3 +557,5 @@ rewrite ^/quit-abusing-marijuana/immediate-effects/?$ https://$host/quit-abusing
 rewrite ^/quit-abusing-marijuana/legalization-laws/?$ https://$host/quit-abusing-marijuana/ permanent;
 rewrite ^/polydrug-use/opioids-amphetamines/?$ https://$host/polydrug-use/opioids-stimulants/ permanent;
 rewrite ^/polydrug-use/benzo-narcotics/?$ https://$host/polydrug-use/benzodiazepines-opioids/ permanent;
+#FACILITY-11694
+rewrite ^/quit-abusing-marijuana/health-long-term-use/?$ https://$host/quit-abusing-marijuana/effects/ permanent;
