--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -559,3 +559,5 @@ rewrite ^/polydrug-use/opioids-amphetamines/?$ https://$host/polydrug-use/opioid
 rewrite ^/polydrug-use/benzo-narcotics/?$ https://$host/polydrug-use/benzodiazepines-opioids/ permanent;
 #FACILITY-11694
 rewrite ^/quit-abusing-marijuana/health-long-term-use/?$ https://$host/quit-abusing-marijuana/effects/ permanent;
+#FACILITY-11695
+rewrite ^/intervention/diy-hire-professional/?$ https://$host/intervention/ permanent;
