--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -561,3 +561,46 @@ rewrite ^/polydrug-use/benzo-narcotics/?$ https://$host/polydrug-use/benzodiazep
 rewrite ^/quit-abusing-marijuana/health-long-term-use/?$ https://$host/quit-abusing-marijuana/effects/ permanent;
 #FACILITY-11695
 rewrite ^/intervention/diy-hire-professional/?$ https://$host/intervention/ permanent;
+#FACILITY-11696
+rewrite ^/ptsd/?$ https://$host/co-occurring-disorders/ptsd/ permanent;
+rewrite ^/ptsd/truths/?$ https://$host/co-occurring-disorders/ptsd/ permanent;
+rewrite ^/ptsd/ptsd-natural-disasters/?$ https://$host/co-occurring-disorders/ptsd/ permanent;
+rewrite ^/ptsd/unlike-normal-stress-response/?$ https://$host/co-occurring-disorders/ptsd/ permanent;
+rewrite ^/ptsd/therapy-options/?$ https://$host/co-occurring-disorders/ptsd/ permanent;
+rewrite ^/frequently-asked-questions/addiction-abuse/?$ https://$host/addiction-info/ permanent;
+rewrite ^/addiction-blog/page/-1/?$ https://$host/blog/ permanent;
+rewrite ^/addiction-blog/page/8/?$ https://$host/blog/ permanent;
+rewrite ^/addiction-demographics/comorbid-medical%20conditions/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/addiction-treatment/history-evolution-mental-health-treatment/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/assessment-diagnose__trashed-2/schizophrenia-2/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
+rewrite ^/assessment-diagnose__trashed/create-addiction-recovery-plan/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/assessment-diagnose__trashed/drug-addiction/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/assessment-diagnose__trashed/home-drug-test/?$ https://$host/addiction-treatment/ permanent;
+rewrite ^/assessment-diagnose__trashed/mental-health-disorder/?$ https://$host/co-occurring-disorders/ permanent;
+rewrite ^/assessment-diagnose__trashed/schizophrenia/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
+rewrite ^/assessment-diagnose/schizophrenia-2/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
+rewrite ^/blog/best-gifts-give-someone-new-addiction-recovery/feed/?$ https://$host/blog/life-in-recovery/great-sober-gifts/ permanent;
+rewrite ^/blog/category/events-updates/?$ https://$host/blog/events-updates/ permanent;
+rewrite ^/blog/events-updates/free-narcan-training/attachment/sunrise-house-overdose-awareness-month-infographics-2/?$ https://$host/blog/events-updates/free-narcan-training/ permanent;
+rewrite ^/blog/events-updates/freedom-from-drugs-alcohol/attachment/race-for-recovery/?$ https://$host/blog/events-updates/freedom-from-drugs-alcohol/ permanent;
+rewrite ^/blog/lead-new-law-enforcement-program-trains-officers-better-combat-drug-abuse/feed/?$ https://$host/blog/news/lead-new-law-enforcement-program-trains-officers-better-combat-drug-abuse/ permanent;
+rewrite ^/blog/life-in-recovery/celebrating-recovery/attachment/sh-walk/?$ https://$host/blog/life-in-recovery/celebrating-recovery/ permanent;
+rewrite ^/blog/news/great-sober-gifts/?$ https://$host/blog/life-in-recovery/great-sober-gifts/ permanent;
+rewrite ^/blog/physical-mental-emotional-the-whole-body-fix-for-addiction/feed/?$ https://$host/blog/life-in-recovery/physical-mental-emotional-the-whole-body-fix-for-addiction/ permanent;
+rewrite ^/blog/tag/adult/?$ https://$host/blog/ permanent;
+rewrite ^/blog/tag/children/?$ https://$host/blog/ permanent;
+rewrite ^/blog/tag/how-to-help/?$ https://$host/blog/ permanent;
+rewrite ^/cause-effect__trashed/?$ https://$host/addiction-info/ permanent;
+rewrite ^/cause-effect/path-drugs-take-body/2019/?$ https://$host/addiction-info/ permanent;
+rewrite ^/depression__trashed/antidepressants__trashed/paroxetine/?$ https://$host/co-occurring-disorders/depression/antidepressants/paroxetine/ permanent;
+rewrite ^/depression__trashed/escitalopram/?$ https://$host/escitalopram/ permanent;
+rewrite ^/depression__trashed/paroxetine/?$ https://$host/co-occurring-disorders/depression/antidepressants/paroxetine/ permanent;
+rewrite ^/depression__trashed/seasonal-affective-disorder/?$ https://$host/seasonal-affective-disorder/ permanent;
+rewrite ^/depression/antidepressants__trashed/paroxetine/?$ https://$host/co-occurring-disorders/depression/antidepressants/paroxetine/ permanent;
+rewrite ^/feed/?$ https://$host/ permanent;
+rewrite ^/mood-disorders__trashed/depression-anxiety/?$ https://$host/co-occurring-disorders/depression/ permanent;
+rewrite ^/obsessive-compulsive-disorder/comparingbehavior/?$ https://$host/co-occurring-disorders/obsessive-compulsive-disorder/ permanent;
+rewrite ^/schizophrenia-2/?$ https://$host/co-occurring-disorders/schizophrenia/ permanent;
+rewrite ^/stop-drinking-alcohol/binge-drinking/2/?$ https://$host/stop-drinking-alcohol/binge-drinking/ permanent;
+rewrite ^/stop-drinking-alcohol/Percentage-contents/?$ https://$host/stop-drinking-alcohol/percentage-contents/ permanent;
+rewrite ^/treat-co-occurring-disorders__trashed/?$ https://$host/co-occurring-disorders/ permanent;
