--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -603,3 +603,5 @@ rewrite ^/schizophrenia-2/?$ https://$host/co-occurring-disorders/schizophrenia/
 rewrite ^/stop-drinking-alcohol/binge-drinking/2/?$ https://$host/stop-drinking-alcohol/binge-drinking/ permanent;
 rewrite ^/stop-drinking-alcohol/Percentage-contents/?$ https://$host/stop-drinking-alcohol/percentage-contents/ permanent;
 rewrite ^/treat-co-occurring-disorders__trashed/?$ https://$host/co-occurring-disorders/ permanent;
+#FACILITY-11697
+rewrite ^/frequently-asked-questions/mental-health/?$ https://$host/co-occurring-disorders/ permanent;
