--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -605,3 +605,6 @@ rewrite ^/stop-drinking-alcohol/Percentage-contents/?$ https://$host/stop-drinki
 rewrite ^/treat-co-occurring-disorders__trashed/?$ https://$host/co-occurring-disorders/ permanent;
 #FACILITY-11697
 rewrite ^/frequently-asked-questions/mental-health/?$ https://$host/co-occurring-disorders/ permanent;
+#FACILITY-12676
+rewrite ^/bath-salts/signs/?$ https://$host/bath-salts/ permanent;
+rewrite ^/help-is-available-in-lafayette-nj/?$ https://$host/drug-rehab-lafayette-nj/ permanent;
