--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -608,3 +608,5 @@ rewrite ^/frequently-asked-questions/mental-health/?$ https://$host/co-occurring
 #FACILITY-12676
 rewrite ^/bath-salts/signs/?$ https://$host/bath-salts/ permanent;
 rewrite ^/help-is-available-in-lafayette-nj/?$ https://$host/drug-rehab-lafayette-nj/ permanent;
+#FACILITY-14343
+rewrite ^/contributors/marcey-davis/?$ https://$host/staff/ permanent;
