--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -610,3 +610,11 @@ rewrite ^/bath-salts/signs/?$ https://$host/bath-salts/ permanent;
 rewrite ^/help-is-available-in-lafayette-nj/?$ https://$host/drug-rehab-lafayette-nj/ permanent;
 #FACILITY-14343
 rewrite ^/contributors/marcey-davis/?$ https://$host/staff/ permanent;
+#CP2-388
+rewrite ^/about/reviews-and-testimonials/?$ https://$host/blog/news/temporary-closure/ permanent;
+#FACILITY-14369
+rewrite ^/ecstasy-abuse/safer-alternatives/?$ https://$host/ecstasy-abuse/ permanent;
+rewrite ^/research-chemicals/tryptamines/?$ https://$host/club-drugs/ permanent;
+rewrite ^/k2-drug-abuse/?$ https://$host/spice-drug-abuse/ permanent;
+rewrite ^/herbal-drugs/khat/?$ https://$host/herbal-drugs/ permanent;
+rewrite ^/herbal-drugs/kratom/?$ https://$host/herbal-drugs/ permanent;
