--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -618,3 +618,9 @@ rewrite ^/research-chemicals/tryptamines/?$ https://$host/club-drugs/ permanent;
 rewrite ^/k2-drug-abuse/?$ https://$host/spice-drug-abuse/ permanent;
 rewrite ^/herbal-drugs/khat/?$ https://$host/herbal-drugs/ permanent;
 rewrite ^/herbal-drugs/kratom/?$ https://$host/herbal-drugs/ permanent;
+#FACILITY-14373
+rewrite ^/contributors/constantine-diakolios/?$ https://$host/staff/ permanent;
+rewrite ^/contributors/michael-rivera/?$ https://$host/staff/ permanent;
+rewrite ^/contributors/victoria-hewitt/?$ https://$host/staff/ permanent;
+rewrite ^/contributors/jody-riscen/?$ https://$host/staff/ permanent;
+rewrite ^/contributors/estela-rowe/?$ https://$host/staff/ permanent;
