--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -624,3 +624,4 @@ rewrite ^/contributors/michael-rivera/?$ https://$host/staff/ permanent;
 rewrite ^/contributors/victoria-hewitt/?$ https://$host/staff/ permanent;
 rewrite ^/contributors/jody-riscen/?$ https://$host/staff/ permanent;
 rewrite ^/contributors/estela-rowe/?$ https://$host/staff/ permanent;
+rewrite ^/contributors/heather-vanness/?$ https://$host/staff/ permanent;
