--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -263,7 +263,7 @@ rewrite ^/cause-effect/top-signs-substance-abuse/?$ https://$host/addiction-info
 rewrite ^/cause-effect/addiction-dependency-set-in/?$ https://$host/addiction-info/ permanent;
 rewrite ^/cause-effect/careers-higher-addiction-rates/?$ https://$host/addiction-demographics/ permanent;
 rewrite ^/cause-effect/nature-nurture-addiction/?$ https://$host/addiction-info/ permanent;
-rewrite ^/cause-effect/withdrawal-symptoms-side-effects/?$ https://$host/detox-process/cope-withdrawals/ permanent;
+rewrite ^/cause-effect/withdrawal-symptoms-side-effects/?$ https://$host/detox-process/ permanent;
 rewrite ^/cause-effect/physical-psychological-addiction/?$ https://$host/addiction-info/ permanent;
 rewrite ^/cause-effect/spot-addiction/?$ https://$host/addiction-info/ permanent;
 rewrite ^/cause-effect/path-drugs-take-body/?$ https://$host/addiction-info/path-drugs-take-body/ permanent;
@@ -533,13 +533,13 @@ rewrite ^/xanax/withdrawal/?$ https://$host/benzodiazepines/alprazolam-xanax/wit
 rewrite ^/xanax/signs-of-abuse/?$ https://$host/benzodiazepines/alprazolam-xanax/ permanent;
 rewrite ^/xanax/?$ https://$host/benzodiazepines/alprazolam-xanax/ permanent;
 rewrite ^/detox-process/medications-ease-pain-withdrawals/?$ https://$host/detox-process/medications/ permanent;
-rewrite ^/detox-process/medications-ease-pain-withdrawals/benzodiazepines/?$ https://$host/detox-process/medications/benzodiazepines/ permanent;
-rewrite ^/detox-process/medications-ease-pain-withdrawals/acamprosate/?$ https://$host/detox-process/medications/acamprosate/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/benzodiazepines/?$ https://$host/detox-process/medications/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/acamprosate/?$ https://$host/detox-process/medications/ permanent;
 rewrite ^/detox-process/medications-ease-pain-withdrawals/clonidine/?$ https://$host/detox-process/medications/clonidine/ permanent;
-rewrite ^/detox-process/medications-ease-pain-withdrawals/desipramine-norpramin/?$ https://$host/detox-process/medications/desipramine-norpramin/ permanent;
-rewrite ^/detox-process/medications-ease-pain-withdrawals/disulfan/?$ https://$host/detox-process/medications/disulfan/ permanent;
-rewrite ^/detox-process/medications-ease-pain-withdrawals/naltrexone/?$ https://$host/detox-process/medications/naltrexone/ permanent;
-rewrite ^/detox-process/medications-ease-pain-withdrawals/phenobarbital/?$ https://$host/detox-process/medications/phenobarbital/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/desipramine-norpramin/?$ https://$host/detox-process/medications/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/disulfan/?$ https://$host/detox-process/medications/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/naltrexone/?$ https://$host/stop-drinking-alcohol/ permanent;
+rewrite ^/detox-process/medications-ease-pain-withdrawals/phenobarbital/?$ https://$host/detox-process/medications/ permanent;
 #FACILITY-10762
 rewrite ^/blog/events-updates/announcing-launch-of-onsite-covid-19-testing/?$ https://$host/blog/events-updates/coronavirus-notice/ permanent;
 rewrite ^/blog/life-in-recovery/best-gifts-give-someone-new-addiction-recovery/?$ https://$host/blog/life-in-recovery/great-sober-gifts/ permanent;
@@ -625,3 +625,16 @@ rewrite ^/contributors/victoria-hewitt/?$ https://$host/staff/ permanent;
 rewrite ^/contributors/jody-riscen/?$ https://$host/staff/ permanent;
 rewrite ^/contributors/estela-rowe/?$ https://$host/staff/ permanent;
 rewrite ^/contributors/heather-vanness/?$ https://$host/staff/ permanent;
+#FACILITY-14374
+rewrite ^/detox-process/medications/benzodiazepines/?$ https://$host/detox-process/medications/ permanent;
+rewrite ^/detox-process/medications/acamprosate/?$ https://$host/detox-process/medications/ permanent;
+rewrite ^/detox-process/medications/desipramine-norpramin/?$ https://$host/detox-process/medications/ permanent;
+rewrite ^/detox-process/medications/phenobarbital/?$ https://$host/detox-process/medications/ permanent;
+rewrite ^/detox-process/medications/disulfan/?$ https://$host/detox-process/medications/ permanent;
+rewrite ^/detox-process/medications/naltrexone/?$ https://$host/stop-drinking-alcohol/ permanent;
+rewrite ^/detox-process/acute-precipitated/?$ https://$host/prescription-opiates/ permanent;
+rewrite ^/detox-process/cold-turkey-tapering-off-drugs/?$ https://$host/detox-process/ permanent;
+rewrite ^/detox-process/at-home-medical-detox/?$ https://$host/detox-process/ permanent;
+rewrite ^/detox-process/cope-withdrawals/?$ https://$host/detox-process/ permanent;
+rewrite ^/detox-process/weaning-off/?$ https://$host/detox-process/ permanent;
+rewrite ^/detox-process/find-center/?$ https://$host/detox-process/ permanent;
