--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -638,3 +638,7 @@ rewrite ^/detox-process/at-home-medical-detox/?$ https://$host/detox-process/ pe
 rewrite ^/detox-process/cope-withdrawals/?$ https://$host/detox-process/ permanent;
 rewrite ^/detox-process/weaning-off/?$ https://$host/detox-process/ permanent;
 rewrite ^/detox-process/find-center/?$ https://$host/detox-process/ permanent;
+#FACILITY-14377
+rewrite ^/stop-drinking-alcohol/mix-energy-drinks/?$ https://$host/stop-drinking-alcohol/ permanent;
+rewrite ^/stop-drinking-alcohol/risks-mixing-prescription-drugs/?$ https://$host/stop-drinking-alcohol/ permanent;
+rewrite ^/stop-drinking-alcohol/controlled-substances/?$ https://$host/stop-drinking-alcohol/ permanent;
