--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -642,3 +642,5 @@ rewrite ^/detox-process/find-center/?$ https://$host/detox-process/ permanent;
 rewrite ^/stop-drinking-alcohol/mix-energy-drinks/?$ https://$host/stop-drinking-alcohol/ permanent;
 rewrite ^/stop-drinking-alcohol/risks-mixing-prescription-drugs/?$ https://$host/stop-drinking-alcohol/ permanent;
 rewrite ^/stop-drinking-alcohol/controlled-substances/?$ https://$host/stop-drinking-alcohol/ permanent;
+
+rewrite ^/blog/news/sunrise-house-recognized-as-cigna-center-of-excellence/?$ https://$host/addiction-treatment-new-jersey/payment-options/insurance/cigna/ permanent;
