--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -644,3 +644,5 @@ rewrite ^/stop-drinking-alcohol/risks-mixing-prescription-drugs/?$ https://$host
 rewrite ^/stop-drinking-alcohol/controlled-substances/?$ https://$host/stop-drinking-alcohol/ permanent;
 
 rewrite ^/blog/news/sunrise-house-recognized-as-cigna-center-of-excellence/?$ https://$host/addiction-treatment-new-jersey/payment-options/insurance/cigna/ permanent;
+#FACILITY-15331
+rewrite ^/about/local-contact/?$ https://$host/contact/ permanent;
