--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -646,3 +646,5 @@ rewrite ^/stop-drinking-alcohol/controlled-substances/?$ https://$host/stop-drin
 rewrite ^/blog/news/sunrise-house-recognized-as-cigna-center-of-excellence/?$ https://$host/addiction-treatment-new-jersey/payment-options/insurance/cigna/ permanent;
 #FACILITY-15331
 rewrite ^/about/local-contact/?$ https://$host/contact/ permanent;
+#FACILITY-15333
+rewrite ^/contributors/tom-britton/?$ https://$host/staff/ permanent;
