--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -648,3 +648,4 @@ rewrite ^/blog/news/sunrise-house-recognized-as-cigna-center-of-excellence/?$ ht
 rewrite ^/about/local-contact/?$ https://$host/contact/ permanent;
 #FACILITY-15333
 rewrite ^/contributors/tom-britton/?$ https://$host/staff/ permanent;
+rewrite ^/about/careers-at-sunrise-house/?$ https://$host/about/ permanent;
