--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -649,3 +649,6 @@ rewrite ^/about/local-contact/?$ https://$host/contact/ permanent;
 #FACILITY-15333
 rewrite ^/contributors/tom-britton/?$ https://$host/staff/ permanent;
 rewrite ^/about/careers-at-sunrise-house/?$ https://$host/about/ permanent;
+
+#Facility-17097 (Automated)
+rewrite ^/addiction-treatment-new-jersey/salute-to-recovery/?$ https://$host/addiction-treatment-new-jersey/veteran-program/ permanent;
