Revert "remove eb conf"
This reverts commit 81c252c73ce6e2a353c49983ca5ebc2af2b49867.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -81,8 +81,8 @@ http {
 
         # Include Custom Redirects
         include conf.d/redirects/*.conf;
-        # # Include the Elastic Beanstalk generated locations
-        # include conf.d/elasticbeanstalk/*.conf;
+        # Include the Elastic Beanstalk generated locations
+        include conf.d/elasticbeanstalk/*.conf;
 
         # Redirect all unmatched requests to adcare
         location / {
