--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -86,9 +86,8 @@ http {
 
         rewrite ^/addiction-treatment-new-jersey/payment-options/insurance/uhc-optum/?$ https://adcare.com/insurance/uhc-optum/ permanent;
 
-        location / {
-            return 301 https://adcare.com;
-        }
+        # test catch-all
+        rewrite ^/(.*) https://adcare.com permanent;
         # # Increase max body size for image uploads
         # client_max_body_size 50M;
     }
