--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -35,54 +35,24 @@ http {
         add_header X-XSS-Protection "1; mode=block";
         add_header Content-Security-Policy "default-src *; font-src 'self' data: fonts.gstatic.com; style-src * 'unsafe-inline'; script-src * 'unsafe-inline' 'unsafe-eval'; img-src * data: 'unsafe-inline'; connect-src * 'unsafe-inline'; frame-src *; object-src 'none'; base-uri 'self';";
 
-        # slow attacks by quickly returning unserved file types
-        location ~* \.(bak|zip|tar|gz|sql|php|env|aspx)$|/\. {
-             return 403;
-        }
-
-        # slow attacks by quickly returning ads.txt
-        location ~ ^/(ads\.txt)$ {
-            return 403;
-        }
-
-        # proxy /wp-content/uploads/ -> s3 bucket
-        location ^~ /wp-content/uploads/ {
-            add_header Cache-Control "public, max-age=14400, must-revalidate";
-            proxy_pass https://s3-us-west-2.amazonaws.com/img-sunrisehouse-com/wp-content/uploads/;
-        }
-
-        # Media: images, icons, video, audio, HTC, 4 hours
-        location ~* \.(?:jpg|jpeg|gif|png|ico|cur|svg|svgz|mp4|ogg|ogv|webm|webp|htc|woff|woff2)$ {
-            add_header Cache-Control "public, max-age=14400, must-revalidate";
-            root /var/app/current;
-        }
-
-        # CSS and Javascript, 4 hours
-        location /_next/static/ {
-            alias /var/app/current/.next/static/;
-            add_header Cache-Control "public, max-age=14400, must-revalidate";
-        }
-
-        if ($http_x_forwarded_proto = "http") {
-            return 301 https://$server_name$request_uri;
-        }
-
-        # adds trailing slash
-        if ($request_uri ~* "^[\w\-\/]+[^\/?]$") {
-            rewrite ^(.*)$ https://$host$1/ permanent;
-        }
-
-        client_header_timeout 60;
-        client_body_timeout   60;
-        keepalive_timeout     60;
-        gzip on;
-        gzip_comp_level 4;
-        gzip_types text/html text/plain text/css application/json application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+        # Other location blocks and settings
 
         # Include Custom Redirects
-        include conf.d/redirects/*.conf;
-        # Include the Elastic Beanstalk generated locations
-        include conf.d/elasticbeanstalk/*.conf;
+        # Include Custom Redirects in a Dedicated Location Block
+        location / {
+            include conf.d/redirects/redirects.conf;
+        }
+
+        # mock health check so 301 of site passes health check deployment
+        location ^~ /health-check {
+            access_log off;
+            return 200;
+        }
+
+        # General redirect rule for all other requests
+        #location ~ ^(?!/health-check/).* {
+        #    return 301 https://adcare.com$request_uri;
+        #}
 
         # Increase max body size for image uploads
         client_max_body_size 50M;
