remove query string

--- a/nginx/conf.d/redirects/redirects.conf
+++ b/nginx/conf.d/redirects/redirects.conf
@@ -102,4 +102,4 @@ rewrite ^/stop-drinking-alcohol/long-term-health-damage/$ https://adcare.com/alc
 rewrite ^/prescription-opiates/fentanyl/$ https://adcare.com/opioids/fentanyl/ permanent;
 rewrite ^/addiction-treatment-new-jersey/payment-options/insurance/uhc-optum/$ https://adcare.com/insurance/uhc-optum/ permanent;
 # Catch-all redirect
-rewrite ^(.*)$ https://adcare.com/ permanent;
+rewrite ^(.*)$ https://adcare.com/? permanent;
